public interface Car {






    String getRegistrationNumber(); //The number on the number plate


    String getMake();

    String getModel(); // The model of the car e.g. A6

    int getNumberOfDoors(); // The number of doors


    int getRegistrationFee(); // Calculates the registration fee for the car

}
